--- a/glamping-party.html
+++ b/glamping-party.html
@@ -57,7 +57,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item text-center">
-                <!-- Navbar link--><a class="nav-link" href="index.html">Home</a>
+                <!-- Navbar link--><a class="nav-link" href="home.html">Home</a>
               </li>
               <li class="nav-item text-center"><a class="nav-link" href="backyard-glamping.html">Glamping</a>
                 
