--- a/home.html
+++ b/home.html
@@ -25,119 +25,156 @@
   </head>
   <body>
     <!-- navbar-->
-    <header class="header">                   
-      <nav class="navbar navbar-expand-lg navbar-light py-4 index-forward">
-        <div class="container d-flex justify-content-center justify-content-lg-between align-items-center">
-          <div class="col-3">
-            <ul class="list-inline small mb-0 text-dark d-none d-lg-block">
-              <li class="list-inline-item"><a class="reset-anchor" href="https://www.facebook.com/Glamping-by-Cyn-106345495240945" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-              <li class="list-inline-item"><a class="reset-anchor" href="https://www.instagram.com/glampingbycyn/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-            </ul>
 
-          </div>
-          <div class="col-6">
-            <div class="row d-flex justify-content-center">
-              <img src="img/detail-by-cyn-logo.PNG" class="logo-image" alt="details by cyn logo">
-            </div>
-          </div>
-          <div class="col-3">
-            <a class="reset-anchor text-sm mb-0 h6 d-none d-lg-block" href="mailto:detailsbycyn@gmail.com"><i class="far fa-envelope me-2"></i>detailsbycyn@gmail.com</a>
-
-          </div>
-        </div>
-      </nav>
-      
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container">
-          <ul class="list-inline small mb-0 text-dark d-block d-lg-none">
-            <li class="list-inline-item"><a class="reset-anchor" href="https://www.facebook.com/Glamping-by-Cyn-106345495240945" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-            <li class="list-inline-item"><a class="reset-anchor" href="https://www.instagram.com/glampingbycyn/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-          </ul>
-          <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span></span><span></span><span></span></button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mx-auto">
-              <li class="nav-item text-center">
-                <!-- Navbar link--><a class="nav-link active" href="index.html">Home</a>
-              </li>
-              <li class="nav-item text-center"><a class="nav-link" href="backyard-glamping.html">Glamping</a>
-                
-              </li>
-              <li class="nav-item text-center">
-                <!-- Navbar link--><a class="nav-link" href="glamping-party.html">Lounge</a>
-              </li>
-              <li class="nav-item text-center">
-                <!-- Navbar link--><a class="nav-link" href="picnic.html">Picnic</a>
-              </li>
-              <li class="nav-item text-center">
-                <!-- Navbar link--><a class="nav-link" href="policies.html">Policies</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
     <!-- Main post-->
     <section class="pb-0">
-      <div class="container-fluid px-0 pnb-4" id="home-background">
-          div.row
-      </div>
-
-    <!--Start New Container-->
-    </div>
-    <div class="container-fluid px-0 pnb-4">
-      <div class="row">
-        <div class="col pb-5">
-          <h4 class="text-center mt-5 logo-font">Add-ons</h4>
-          <p class="text-center lead">Customize your Glamping</p>
-          <div class="container pt-lg-5 d-flex justify-content-center">
-            <div class="row">
-              <div class="col col-lg-3 g-3 d-flex justify-content-center">
-                <figure>
-                  <img class="add-on-imgs" id="charcuterie-add-on" src="img/HD-photos/add-on3.jpeg" alt="">
-                  <figcaption class="lead text-center add-on-text pt-3">Charcuterie</figcaption>
-                </figure>
+      <div class="container-fluid px-0 pnb-4">
+        <header class="header">
+          <header class="header">
+            <nav class="navbar navbar-expand-lg navbar-light position-absolute w-100" id="navbar">
+              <div class="container"><a class="navbar-brand d-block d-lg-none" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="..." height="40px" width="60"></a>
+                <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span></span><span></span><span></span></button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="home.html">Home </a></li>
+                    <li class="nav-item"><a class="nav-link" href="backyard-glamping.html">Glamping</a></li>
+                    <li class="nav-item"><a class="nav-link" href="glamping-party.html">Lounge</a></li>
+                  </ul>
+                  <ul class="navbar-nav d-none d-lg-block px-4">
+                    <li class="nav-item m-0"><a class="navbar-brand m-0" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="..." width="80"></a></li>
+                  </ul>
+                  <ul class="navbar-nav me-auto">
+                    <li class="nav-item"><a class="nav-link" href="picnic.html">Picnics </a></li>
+                    <li class="nav-item"><a class="nav-link" href="policies.html">Policies </a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                  </ul>
+                </div>
               </div>
-              <div class="col col-lg-3 g-3 d-flex justify-content-center">
-                <figure>
-                  <img class="add-on-imgs" id="picnic-table-add-on" src="img/HD-photos/add-on.jpeg" alt="">
-                  <figcaption class="lead text-center add-on-text pt-3">Picnic Table</figcaption>
-                </figure>
-              </div>
-              <div class="col col-lg-3 g-3 d-flex justify-content-center">
-                <figure>
-                  <img class="add-on-imgs" id="camera-add-on" src="img/HD-photos/add-on1.jpeg" alt="">
-                  <figcaption class="lead text-center add-on-text pt-3">Instant camera</figcaption>
-                </figure>
-              </div>
-              <div class="col col-lg-3 g-3 d-flex justify-content-center">
-                <figure>
-                  <img class="add-on-imgs" id="balloons-add-on" src="img/HD-photos/add-on5.jpeg" alt="">
-                  <figcaption class="lead text-center add-on-text pt-3">Balloons</figcaption>
-                </figure>
-              </div>
+            </nav>
+          </header>
+        </header>
+            <div class="carousel slide" data-bs-ride="carousel" id="carouselHeader">
+                <div class="carousel-indicators">
+                    <button class="active" type="button" data-bs-target="#carouselHeader" data-bs-slide-to="0" current="true" aria-label="glamping"></button>
+                    <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="1" aria-label="lounge"></button>
+                    <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="2" aria-label="picnic"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <div class="overlay-image" style="background-image: url(img/HD-photos/glamp-tent7.jpeg); background-position: center; background-repeat: no-repeat; width: 100%; height: 40rem; background-size: cover;"></div>
+                      <div class="container carousel-container">
+                        <div class="row">
+                          <div class="col-12">
+                            <h1>Glamping</h1>
+                          </div>
+                          <div class="col-12">
+                            <p>Perfect for date nights, family nights, or a weekend getaway right in your backyard!</p>
+                          </div>
+                          <div class="col d-flex justify-content-center mt-5 mb-5">
+                            <button type="button" class="btn btn-design"><a href="backyard-glamping.html">Learn more</a></button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="carousel-item">
+                      <div class="overlay-image" style="background-image: url(img/HD-photos/glamp-table.jpeg); background-position: center; background-repeat: no-repeat; width: 100%; height: 40rem; background-size: cover;"></div>
+                      <div class="container carousel-container">
+                        <div class="row">
+                          <div class="col-12">
+                            <h1>Lounge</h1>
+                          </div>
+                          <div class="col-12">
+                            <p>Perfect for weddings, birthdays, graduations, backyard bbq and parties!</p>
+                          </div>
+                          <div class="col d-flex justify-content-center mt-5 mb-5">
+                            <button type="button" class="btn btn-design"><a href="backyard-glamping.html">Learn more</a></button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="carousel-item">
+                      <div class="overlay-image" style="background-image: url(img/HD-photos/picnic-1.jpeg); background-position: center; background-repeat: no-repeat; width: 100%; height: 40rem; background-size: cover;"></div>
+                      <div class="container carousel-container">
+                        <div class="row">
+                          <div class="col-12">
+                            <h1>Picnic</h1>
+                          </div>
+                          <div class="col-12">
+                            <p>Perfect for a hangout with friends and family!</p>
+                          </div>
+                          <div class="col d-flex justify-content-center mt-5 mb-5">
+                            <button type="button" class="btn btn-design"><a href="backyard-glamping.html">Learn more</a></button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselHeader" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselHeader" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-          </div>
         </div>
-      </div>
-      <div class="row" style="background-color: rgba(233, 202, 163, 0.29);">
-        <h4 class="text-center mt-5 logo-font">Customer Testimonials</h4>
-        <!--Start carousel-->
 
-        <!--End carousel-->
-        <div class="row">
+        <!--Start New Container-->
+        <div class="container-fluid px-0 pnb-4">
+            <div class="row">
+                <div class="col pb-5">
+                <h5 class="text-center mt-5">Add-ons</h5>
+                <p class="text-center lead">Customize your Glamping</p>
+                <div class="container pt-lg-5 d-flex justify-content-center">
+                    <div class="row">
+                    <div class="col col-lg-3 g-3 d-flex justify-content-center">
+                        <figure>
+                        <img class="add-on-imgs" id="charcuterie-add-on" src="img/HD-photos/add-on3.jpeg" alt="">
+                        <figcaption class="lead text-center add-on-text pt-3">Charcuterie</figcaption>
+                        </figure>
+                    </div>
+                    <div class="col col-lg-3 g-3 d-flex justify-content-center">
+                        <figure>
+                        <img class="add-on-imgs" id="picnic-table-add-on" src="img/HD-photos/add-on.jpeg" alt="">
+                        <figcaption class="lead text-center add-on-text pt-3">Picnic Table</figcaption>
+                        </figure>
+                    </div>
+                    <div class="col col-lg-3 g-3 d-flex justify-content-center">
+                        <figure>
+                        <img class="add-on-imgs" id="camera-add-on" src="img/HD-photos/add-on1.jpeg" alt="">
+                        <figcaption class="lead text-center add-on-text pt-3">Instant camera</figcaption>
+                        </figure>
+                    </div>
+                    <div class="col col-lg-3 g-3 d-flex justify-content-center">
+                        <figure>
+                        <img class="add-on-imgs" id="balloons-add-on" src="img/HD-photos/add-on5.jpeg" alt="">
+                        <figcaption class="lead text-center add-on-text pt-3">Balloons</figcaption>
+                        </figure>
+                    </div>
+                    </div>
+                </div>
+                </div>
+        </div>
+        <div class="row" style="background-color: rgba(233, 202, 163, 0.29);">
+            <h5 class="text-center mt-5">Customer Testimonials</h5>
+            <!--Start carousel-->
 
-          <div class="col">
-            <p class="text-center lead testimonials">"Thank you for providing us with a incredible experience this weekend! if you are looking for a luxury outdoor experience in the confort of your backyard, then look no further! Glamping by Cyn is the place. the level of intentional and love is just amazing" - Ed C.</p>
-            <p class="text-center"></p>
-          </div>
+            <!--End carousel-->
+            <div class="row">
+
+            <div class="col">
+                <p class="text-center lead testimonials">"Thank you for providing us with a incredible experience this weekend! if you are looking for a luxury outdoor experience in the confort of your backyard, then look no further! Glamping by Cyn is the place. the level of intentional and love is just amazing" - Ed C.</p>
+                <p class="text-center"></p>
+            </div>
+            </div>
+            <div class="row">
+            <div class="col">
+                <p class="text-center lead testimonials">"Thank you to Details By Cyn for making this anniversary surprise happen!!! We have been planning this for quite some time and it was so hard to keep this a secret from lan!! It was so special and truly unforgettable. Thank you for everything."  <br> - Brooklyn L.</p>
+            </div>
+            </div>
         </div>
-        <div class="row">
-          <div class="col">
-            <p class="text-center lead testimonials">"Thank you to Details By Cyn for making this anniversary surprise happen!!! We have been planning this for quite some time and it was so hard to keep this a secret from lan!! It was so special and truly unforgettable. Thank you for everything."  <br> - Brooklyn L.</p>
-          </div>
         </div>
-      </div>
-    </div>
     </section>
     <!-- Instagram items-->
     <section><a class="instagram-section-title d-none d-sm-block" href="https://www.instagram.com/glampingbycyn/" target="_blank"><i class="fab fa-instagram me-2"></i>Follow us: @glampingbycyn</a>
@@ -161,8 +198,8 @@
     <footer class="py-4" style="background: #111">
       <div class="container text-center">
         <div class="row align-items-center">
-          <div class="col-md-4 text-lg-start logo-font">Details by Cyn</div>
-          <div class="col-md-4 text-center">
+          <div class="col-md-3 text-lg-start logo-font">Details by Cyn</div>
+          <div class="col-md-3 text-center">
             <div class="d-flex align-items-center flex-wrap justify-content-center">
               <h6 class="text-muted mb-0 py-2 me-3">Follow us<span class="ms-3">-</span></h6>
               <ul class="list-inline small mb-0 text-white">
@@ -171,9 +208,13 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-4 text-lg-end">
+          <div class="col-md-3 text-lg-end">
             <p class="mb-0 text-muted text-sm text-heading">Template designed by <a href="https://bootstrapious.com/p/juliette-bootstrap-feminine-blog-template" class="">Bootstrapious</a>. </p>
             <!-- If you want to remove the backlink, please purchase the Attribution-Free License. See details in readme.txt or license.txt. Thanks!-->
+          </div>
+          <div class="col-md-3">
+            <a class="text-md mb-0" href="mailto:detailsbycyn@gmail.com"><i class="far fa-envelope me-2"></i>detailsbycyn@gmail.com</a>
+
           </div>
         </div>
       </div>
