--- a/policies.html
+++ b/policies.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Details by Cyn | Home</title>
+    <title>Details by Cyn | Policies</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -61,7 +61,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item text-center">
-                <!-- Navbar link--><a class="nav-link" href="index.html">Home</a>
+                <!-- Navbar link--><a class="nav-link" href="home.html">Home</a>
               </li>
               <li class="nav-item text-center"><a class="nav-link" href="backyard-glamping.html">Glamping</a>
                 
