website layout changes

--- a/home.html
+++ b/home.html
@@ -24,8 +24,6 @@
     <link rel="stylesheet" href="/webfontkit-20220321-172217/stylesheet.css">
   </head>
   <body>
-    <!-- navbar-->
-
     <!-- Main post-->
     <section class="pb-0">
       <div class="container-fluid px-0 pnb-4">
@@ -159,7 +157,30 @@
         <div class="row" style="background-color: rgba(233, 202, 163, 0.29);">
             <h5 class="text-center mt-5">Customer Testimonials</h5>
             <!--Start carousel-->
-
+            <div class="bg-body shadow text-center p-4 rounded-3 position-relative mb-5 mb-md-0">
+							<!-- Avatar -->
+							<div class="avatar avatar-xl mb-3">
+								<img class="avatar-img rounded-circle" src="assets/images/avatar/01.jpg" alt="avatar">
+							</div>
+							<!-- Content -->
+							<blockquote>
+								<p>
+									<span class="me-1 small"><i class="fas fa-quote-left"></i></span>
+										Moonlight newspaper up its enjoyment agreeable depending. Timed voice share led him to widen noisy young. At weddings believed laughing
+									<span class="ms-1 small"><i class="fas fa-quote-right"></i></span>
+								</p>
+							</blockquote>
+							<!-- Rating -->
+							<ul class="list-inline mb-2">
+								<li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
+								<li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
+								<li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
+								<li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
+								<li class="list-inline-item me-0 small"><i class="fas fa-star-half-alt text-warning"></i></li>
+							</ul>
+							<!-- Info -->
+							<h6 class="mb-0">Carolyn Ortiz</h6>
+						</div>
             <!--End carousel-->
             <div class="row">
 
