--- a/policies.html
+++ b/policies.html
@@ -26,69 +26,39 @@
   </head>
   <body>
     <!-- navbar-->
-    <header class="header">                   
-      <nav class="navbar navbar-expand-lg navbar-light py-4 index-forward">
-        <div class="container d-flex justify-content-center justify-content-lg-between align-items-center">
-          <div class="col-3">
-            <ul class="list-inline small mb-0 text-dark d-none d-lg-block">
-              <li class="list-inline-item"><a class="reset-anchor" href="https://www.facebook.com/Glamping-by-Cyn-106345495240945" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-              <li class="list-inline-item"><a class="reset-anchor" href="https://www.instagram.com/glampingbycyn/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-            </ul>
-
-          </div>
-          <div class="col-6">
-            <div class="row text-center">
-              <p>est 2021</p>
-            </div>
-            <div class="row d-flex justify-content-center">
-              <img src="img/detail-by-cyn-logo.PNG" class="logo-image" alt="details by cyn logo">
-            </div>
-          </div>
-          <div class="col-3">
-            <a class="reset-anchor text-sm mb-0 h6 d-none d-lg-block" href="mailto:detailsbycyn@gmail.com"><i class="far fa-envelope me-2"></i>detailsbycyn@gmail.com</a>
-
-          </div>
-        </div>
-      </nav>
-      
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container">
-          <ul class="list-inline small mb-0 text-dark d-block d-lg-none">
-            <li class="list-inline-item"><a class="reset-anchor" href="https://www.facebook.com/Glamping-by-Cyn-106345495240945" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-            <li class="list-inline-item"><a class="reset-anchor" href="https://www.instagram.com/glampingbycyn/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-          </ul>
-          <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span></span><span></span><span></span></button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mx-auto">
-              <li class="nav-item text-center">
-                <!-- Navbar link--><a class="nav-link" href="home.html">Home</a>
-              </li>
-              <li class="nav-item text-center"><a class="nav-link" href="backyard-glamping.html">Glamping</a>
-                
-              </li>
-              <li class="nav-item text-center">
-                <!-- Navbar link--><a class="nav-link" href="glamping-party.html">Lounge</a>
-              </li>
-              <li class="nav-item text-center">
-                <!-- Navbar link--><a class="nav-link" href="picnic.html">Picnic</a>
-              </li>
-              <li class="nav-item text-center">
-                <!-- Navbar link--><a class="nav-link active" href="policies.html">Policies</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
     <!-- Main post-->
     <section class="pb-0">
       <div class="container-fluid px-0 pnb-4" id="policies-background">
+        <header class="header">
+          <header class="header">
+            <nav class="navbar navbar-expand-lg navbar-light position-absolute w-100" id="navbar">
+              <div class="container"><a class="navbar-brand d-block d-lg-none" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="..." height="40px" width="60"></a>
+                <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span></span><span></span><span></span></button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="home.html">Home </a></li>
+                    <li class="nav-item"><a class="nav-link" href="backyard-glamping.html">Glamping</a></li>
+                    <li class="nav-item"><a class="nav-link" href="glamping-party.html">Lounge</a></li>
+                  </ul>
+                  <ul class="navbar-nav d-none d-lg-block px-4">
+                    <li class="nav-item m-0"><a class="navbar-brand m-0" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="..." width="80"></a></li>
+                  </ul>
+                  <ul class="navbar-nav me-auto">
+                    <li class="nav-item"><a class="nav-link" href="picnic.html">Picnics </a></li>
+                    <li class="nav-item"><a class="nav-link" href="policies.html">Policies </a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
+          </header>
+        </header>
         <div class="row transparent-bg text-center" >
           <div class="col-12 mt-5">
             <h1>Policies</h1>
           </div>
           <div class="col-12 d-flex justify-content-center">
-              <img src="img/floral-design-with-curled-edges.png" height="90px" width="100px" alt="floral design">
+              <img src="img/floral-design-with-curled-edges.png" alt="floral design" class="floral-design-img">
           </div>
           <div class="col-12 content-styling">
             <h5>Payment Policy</h5>
@@ -97,7 +67,7 @@
             <p>No cancellations or rescheduling can be made within 72 hours of your glamping experience, picnic, or event. Your non-refundable deposit may be used as a credit to reschedule your booking if needed. Once your glamping experience, event or picnic is set up on the day of your reservation, we cannot  cancel or reschedule and your deposit will no be refunded.</p>
           </div>
           <div class="col-12 d-flex justify-content-center">
-            <img src="img/floral-design-with-curled-edges.png" height="90px" width="100px" alt="floral design">
+            <img src="img/floral-design-with-curled-edges.png" alt="floral design" class="floral-design-img">
           </div>
         </div>
       </div>
