--- a/policies.html
+++ b/policies.html
@@ -54,7 +54,7 @@
           </header>
         </header>
         <div class="row transparent-bg text-center" >
-          <div class="col-12 mt-5">
+          <div class="col-12" style="margin-top: 170px;">
             <h1>Policies</h1>
           </div>
           <div class="col-12 d-flex justify-content-center">
