change customer testimonial element

--- a/home.html
+++ b/home.html
@@ -156,46 +156,36 @@
         </div>
         <div class="row" style="background-color: rgba(233, 202, 163, 0.29);">
             <h5 class="text-center mt-5">Customer Testimonials</h5>
-            <!--Start carousel-->
-            <div class="bg-body shadow text-center p-4 rounded-3 position-relative mb-5 mb-md-0">
-							<!-- Avatar -->
-							<div class="avatar avatar-xl mb-3">
-								<img class="avatar-img rounded-circle" src="assets/images/avatar/01.jpg" alt="avatar">
-							</div>
-							<!-- Content -->
-							<blockquote>
-								<p>
-									<span class="me-1 small"><i class="fas fa-quote-left"></i></span>
-										Moonlight newspaper up its enjoyment agreeable depending. Timed voice share led him to widen noisy young. At weddings believed laughing
-									<span class="ms-1 small"><i class="fas fa-quote-right"></i></span>
-								</p>
-							</blockquote>
-							<!-- Rating -->
-							<ul class="list-inline mb-2">
-								<li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
-								<li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
-								<li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
-								<li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
-								<li class="list-inline-item me-0 small"><i class="fas fa-star-half-alt text-warning"></i></li>
-							</ul>
-							<!-- Info -->
-							<h6 class="mb-0">Carolyn Ortiz</h6>
-						</div>
-            <!--End carousel-->
-            <div class="row">
-
-            <div class="col">
-                <p class="text-center lead testimonials">"Thank you for providing us with a incredible experience this weekend! if you are looking for a luxury outdoor experience in the confort of your backyard, then look no further! Glamping by Cyn is the place. the level of intentional and love is just amazing" - Ed C.</p>
-                <p class="text-center"></p>
+            <div class="col-12 col-lg-6 mb-5 mt-3" style="display: grid; place-content: center;">
+              <div class="test-custom shadow text-center p-4 rounded-3 position-relative mb-5 mb-md-0">
+                <!-- Content -->
+                <blockquote>
+                  <p>
+                    <span class="me-1 small"><i class="fas fa-quote-left"></i></span>
+                    Thank you for providing us with a incredible experience this weekend! if you are looking for a luxury outdoor experience in the confort of your backyard, then look no further! Details by Cyn is the place. the level of intentional and love is just amazing
+                    <span class="ms-1 small"><i class="fas fa-quote-right"></i></span>
+                  </p>
+                </blockquote>
+                <!-- Info -->
+                <h6 class="mb-0">Ed C.</h6>
+              </div>
             </div>
+            <div class="col-12 col-lg-6 mb-5 mt-3" style="display: grid; place-content: center;">
+              <div class="test-custom shadow text-center p-4 rounded-3 position-relative mb-5 mb-md-0">
+                <!-- Content -->
+                <blockquote>
+                  <p>
+                    <span class="me-1 small"><i class="fas fa-quote-left"></i></span>
+                    Thank you to Details By Cyn for making this anniversary surprise happen!!! We have been planning this for quite some time and it was so hard to keep this a secret from lan!! It was so special and truly unforgettable. Thank you for everything.                    <span class="ms-1 small"><i class="fas fa-quote-right"></i></span>
+                  </p>
+                </blockquote>
+                <!-- Info -->
+                <h6 class="mb-0">Brooklyn L.</h6>
+              </div>
             </div>
-            <div class="row">
-            <div class="col">
-                <p class="text-center lead testimonials">"Thank you to Details By Cyn for making this anniversary surprise happen!!! We have been planning this for quite some time and it was so hard to keep this a secret from lan!! It was so special and truly unforgettable. Thank you for everything."  <br> - Brooklyn L.</p>
-            </div>
-            </div>
+            
         </div>
-        </div>
+      </div>
     </section>
     <!-- Instagram items-->
     <section><a class="instagram-section-title d-none d-sm-block" href="https://www.instagram.com/glampingbycyn/" target="_blank"><i class="fab fa-instagram me-2"></i>Follow us: @glampingbycyn</a>
